--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <main class="main">
+  <nav id="nav">
+    <span> {{ title }} </span>
+  </nav>
   <div class="content">
     <p>{{ title }}</p>
   </div>
