--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -7,3 +7,26 @@
     height: 64px
     color: #fff
     font: 900 24px sans-serif
+
+.content
+    width: 96vw
+    margin: 32px auto
+    max-width: 800px
+    .selectors
+        display: flex
+        justify-content: space-evenly
+        padding: 20px 0
+        margin-bottom: 32px
+        border-radius: 10px
+        background-color: #fff
+        .selector
+            display: flex
+            flex-direction: column
+            span
+                font: 600 14px sans-serif
+                margin-bottom: 4px
+            select
+                padding: 8px 16px
+                border-radius: 6px
+                border: 1px solid #c1c7c9
+                cursor: pointer
