feat: bar chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
         </select>
       </div>
     </div>
+    <div class="graph">
+      <div id="container"></div>
+    </div>
   </div>
 </main>
 
