--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -30,3 +30,8 @@
                 border-radius: 6px
                 border: 1px solid #c1c7c9
                 cursor: pointer
+    .graph
+        padding: 20px 0
+        margin-bottom: 32px
+        border-radius: 10px
+        background-color: #fff
